--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stage-flow/react",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "type": "module",
   "description": "React integration for stage flow library",
   "main": "dist/index.js",
@@ -17,7 +17,8 @@
   "unpkg": "dist/index.umd.js",
   "jsdelivr": "dist/index.umd.js",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "rollup -c",
@@ -30,7 +31,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@stage-flow/core": "1.0.0",
+    "@stage-flow/core": "0.0.2",
     "framer-motion": "^10.16.0"
   },
   "devDependencies": {
@@ -52,5 +53,23 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "keywords": [
+    "stage-flow",
+    "state-machine",
+    "react",
+    "typescript",
+    "animation",
+    "plugin-system"
+  ],
+  "author": "SimpleCORE",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/simplecore-inc/stage-flow.git"
+  },
+  "bugs": {
+    "url": "https://github.com/simplecore-inc/stage-flow/issues"
+  },
+  "homepage": "https://stage-flow.simplecore.dev"
 }
