--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build packages
         run: |
-          npm run build:prod
+          npx turbo run build:prod
           cd packages/core && npm run build:prod
           cd ../react && npm run build:prod
           cd ../plugins && npm run build:prod
