--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,25 +21,36 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm ci
-          cd packages/core && npm ci
-          cd ../react && npm ci
-          cd ../plugins && npm ci
-          cd ../testing && npm ci
-          cd ../../website && npm ci
+        run: npm ci
 
-      - name: Build packages
+      - name: Build core package
         run: |
-          npx turbo run build:prod
-          cd packages/core && npm run build:prod
-          cd ../react && npm run build:prod
-          cd ../plugins && npm run build:prod
-          cd ../testing && npm run build:prod
+          cd packages/core
+          npm ci
+          npm run build:prod
+
+      - name: Build react package
+        run: |
+          cd packages/react
+          npm ci
+          npm run build:prod
+
+      - name: Build plugins package
+        run: |
+          cd packages/plugins
+          npm ci
+          npm run build:prod
+
+      - name: Build testing package
+        run: |
+          cd packages/testing
+          npm ci
+          npm run build:prod
 
       - name: Build website
         run: |
           cd website
+          npm ci
           npm run build
 
       - name: Setup Pages
@@ -51,9 +62,6 @@ jobs:
           path: './website/build'
 
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
