--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,13 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  release:
-    types: [published]
+  workflow_dispatch:
+    inputs:
+      publish_npm:
+        description: 'Publish packages to NPM'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   test:
@@ -38,7 +43,7 @@ jobs:
       run: npm run test
     
     - name: Build packages
-      run: npm run build:prod
+      run: npx turbo run build:prod
 
   build-docs:
     runs-on: ubuntu-latest
@@ -69,7 +74,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.publish_npm == true
     
     steps:
     - uses: actions/checkout@v4
@@ -85,7 +90,7 @@ jobs:
       run: npm ci
     
     - name: Build packages
-      run: npm run build:prod
+      run: npx turbo run build:prod
     
     - name: Publish to NPM
       run: |
