--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,8 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^20.8.0",
     "rollup": "^4.0.0",
