--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -34,6 +34,8 @@
     "@stage-flow/core": "0.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "jsdom": "^22.1.0",
     "rollup": "^4.0.0",
