--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,7 +49,6 @@
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
   },
-  "peerDependencies": {},
   "sideEffects": false,
   "keywords": [
     "stage-flow",
@@ -68,5 +67,8 @@
   "bugs": {
     "url": "https://github.com/simplecore-inc/stage-flow/issues"
   },
-  "homepage": "https://stage-flow.simplecore.dev"
+  "homepage": "https://stage-flow.simplecore.dev",
+  "dependencies": {
+    "@stage-flow/react": "^0.0.2"
+  }
 }
