--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -31,7 +31,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@stage-flow/core": "0.0.2"
+    "@stage-flow/core": "file:../core"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.1",
