--- a/website/package.json
+++ b/website/package.json
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
+    "@docusaurus/plugin-client-redirects": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@docusaurus/theme-live-codeblock": "^3.8.1",
-    "@docusaurus/plugin-client-redirects": "3.8.1",
     "@mdx-js/react": "^3.0.0",
-    "@stage-flow/core": "^0.0.2",
-    "@stage-flow/plugins": "^0.0.2",
-    "@stage-flow/react": "^0.0.2",
-    "@stage-flow/testing": "^0.0.2",
+    "@stage-flow/core": "file:../packages/core",
+    "@stage-flow/plugins": "file:../packages/plugins",
+    "@stage-flow/react": "file:../packages/react",
+    "@stage-flow/testing": "file:../packages/testing",
     "clsx": "^2.0.0",
     "framer-motion": "^12.23.12",
     "prism-react-renderer": "^2.3.0",
