fix: Update homepage URLs in package.json and README.md files to point to GitHub Pages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,7 +67,7 @@
   "bugs": {
     "url": "https://github.com/simplecore-inc/stage-flow/issues"
   },
-  "homepage": "https://stage-flow.simplecore.dev",
+  "homepage": "https://simplecore-inc.github.io/stage-flow/",
   "dependencies": {
     "@stage-flow/react": "^0.0.2"
   }
