--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -73,5 +73,5 @@
   "bugs": {
     "url": "https://github.com/simplecore-inc/stage-flow/issues"
   },
-  "homepage": "https://stage-flow.simplecore.dev"
+  "homepage": "https://simplecore-inc.github.io/stage-flow/"
 }
