--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "bugs": {
     "url": "https://github.com/simplecore-inc/stage-flow/issues"
   },
-  "homepage": "https://stage-flow.simplecore.dev"
+  "homepage": "https://simplecore-inc.github.io/stage-flow/"
 }
