refactor: Update README.md and core package documentation with new examples and improved structure

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,8 +67,5 @@
   "bugs": {
     "url": "https://github.com/simplecore-inc/stage-flow/issues"
   },
-  "homepage": "https://simplecore-inc.github.io/stage-flow/",
-  "dependencies": {
-    "@stage-flow/react": "^0.0.2"
-  }
+  "homepage": "https://simplecore-inc.github.io/stage-flow/"
 }
