--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,15 @@
-name: CI/CD
+name: CI
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch:
-    inputs:
-      publish_npm:
-        description: 'Publish packages to NPM'
-        required: false
-        default: false
-        type: boolean
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, 'Release version') }}
     
     strategy:
       matrix:
@@ -43,60 +37,4 @@ jobs:
       run: npm run test
     
     - name: Build packages
-      run: npx turbo run build:prod
-
-  build-docs:
-    runs-on: ubuntu-latest
-    needs: test
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build documentation
-      run: npm run docs:build
-    
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./website/build
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.publish_npm == true
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        registry-url: 'https://registry.npmjs.org'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build packages
-      run: npx turbo run build:prod
-    
-    - name: Publish to NPM
-      run: |
-        cd packages/core && npm publish --access public
-        cd ../react && npm publish --access public
-        cd ../plugins && npm publish --access public
-        cd ../testing && npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+      run: npx turbo run build:prod 
