--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -1,10 +1,7 @@
-name: Deploy to GitHub Pages
+name: Deploy Documentation
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
 
 permissions:
   id-token: write
@@ -29,11 +26,7 @@ jobs:
         run: npm ci
 
       - name: Build packages
-        run: |
-          cd packages/core && npm ci && npm run build:prod
-          cd ../react && npm ci && npm run build:prod
-          cd ../plugins && npm ci && npm run build:prod
-          cd ../testing && npm ci && npm run build:prod
+        run: npx turbo run build:prod
 
       - name: Build website
         run: |
@@ -54,7 +47,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
