--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,7 +31,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@stage-flow/core": "file:../core",
+    "@stage-flow/core": "^0.0.2",
     "framer-motion": "^10.16.0"
   },
   "devDependencies": {
