--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,17 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -45,10 +50,12 @@ jobs:
 
       - name: Create Git tag and commit
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "dev@simplecore.kr"
+          git config --local user.name "SimpleCORE"
           git add .
           git commit -m "Release version ${{ github.event.inputs.version }}" || echo "No changes to commit"
           git tag v${{ github.event.inputs.version }}
           git push origin main
-          git push origin v${{ github.event.inputs.version }} 
+          git push origin v${{ github.event.inputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
