feat: Add tag verification step and update workflow documentation for GitHub Actions

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,8 +18,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.tag }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Verify tag exists
+        run: |
+          if ! git tag | grep -q "^${{ github.event.inputs.tag }}$"; then
+            echo "Error: Tag '${{ github.event.inputs.tag }}' does not exist"
+            echo "Available tags:"
+            git tag
+            exit 1
+          fi
+          echo "Tag '${{ github.event.inputs.tag }}' found"
+
+      - name: Checkout specific tag
+        run: |
+          git fetch origin tag ${{ github.event.inputs.tag }}
+          git checkout ${{ github.event.inputs.tag }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
