--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - name: Fetch all tags
+        run: git fetch --tags
 
       - name: Verify tag exists
         run: |
@@ -32,7 +36,6 @@ jobs:
 
       - name: Checkout specific tag
         run: |
-          git fetch origin tag ${{ github.event.inputs.tag }}
           git checkout ${{ github.event.inputs.tag }}
 
       - name: Setup Node.js
